fixed footing styling to center logo on mobile

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,10 @@ footer{
     padding-top: 5%;
     padding-bottom: 5%;
     margin-top: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: rgb(31, 28, 28);
     border: 3px solid black;
 }
@@ -110,15 +114,10 @@ input[type="checkbox"]{
     filter: drop-shadow(5px 5px 5px black);
 }
 .mclogo2{
-    position: absolute;
-    width: 400px;
-    left: 200px;
-    right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    clip: rect(0, 200px, 200px, 0);
-    -webkit-filter: drop-shadow(1px 1px 1px black);
-    filter: drop-shadow(1px 1px 1px black);
+    width: 250px;
+    -webkit-filter: drop-shadow(3px 3px 3px black);
+    filter: drop-shadow(3px 3px 3px black);
+    margin-bottom: 1em;
 }
 .container{
     display: flex;
